# ods-feature-registry

./: .gitignore  pyproject.toml  requirements.txt  setup.cfg
feature_registry/: __init__.py  daily.py  merge.py  offset.py  registry.py
