[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "feature_registry"
version = "1.0"
description = "https://github.com/pandov/ods-feature-registry"
authors = [
    {name = "Viacheslav Pandov", email = "pandovvd@gmail.com"},
]
readme = "README.md"
dynamic = ["dependencies"]


[tool.setuptools]
packages = ["feature_registry"]


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
