[metadata]
name = "feature_registry"
version = 1.0
description = ""
author = "Viacheslav Pandov"
author_email = "pandovvd@gmail.com>"
url = "https://github.com/pandov/ods-feature-registry"
readme = "README.md"


[options]
packages = find:
install_requires =
    numpy == 1.26.4
    polars == 1.9.0
    polars-u64-idx == 1.12.0
    pyarrow == 17.0.0
